[package]
name = "gnemnolf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
octocrab = "0.16"
serde = { version = "1.0.142", features = [ "derive" ] }
serde_yaml = "0.9.4"
