[package]
name = "maunz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
octocrab = "0.16"
serde = { version = "1.0.142", features = [ "derive" ] }
serde_yaml = "0.9.4"
serde_json = "1.0.83"
chrono = "0.4.20"
